2007-04-19	Thomas Hempel	<thomas@work.de>
	
	* Implemented feature request #3894: Open module on startup

2007-04-18  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #3729: Roll-over (RO) on a GMENU in IE didn't work with xhtml_strict

2007-04-18  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed: t3lib_BEfunc::getRecord() did not free recordset. This can cause memory leaks if persistent mysql connections are used

2007-04-14  Dmitry Dulepov  <dmitry@typo3.org>

	* Workspaces: added class.wslib_gui.php to allow using WS GUI from extensions
	* Fixed HTML syntax errors with some old html files

2007-04-05  Martin Kutschker  <martin.t.kutschker@blackbox.net>

	* Renamed Typoscript condition julianday to dayofyear (see change from 2007-04-03)
	* Made debug logging of user-supplied SQL queries possible in t3lib_db.

2007-04-04 Andreas Otto <andreas.otto@dkd.de>

	* Related to bug #4447: A directory handle was not correclty used.

2007-04-03 Andreas Otto <andreas.otto@dkd.de>

	* Implemented feature request #4914: Adding to new conditions (year and julianday) to class.t3lib_matchcondition.php.

2007-04-03  Dmitry Dulepov  <dmitry@typo3.org>

	* Workspaces: added configurable synchronous stage change and publishing

2007-04-02  Michael Stucki  <michael@typo3.org>

	* Fixed bug #5088: Cache is not saved properly because of charset conflict in the database. Changing the field type of cache_hash.content from mediumtext to mediumblob. To make this work, you need to compare your database in the Install Tool.

2007-04-02  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #4447: "Clear FE cache" doesn't clear "typo3temp/cache_pages" directory

2007-03-30  Oliver Hader  <oh@inpublica.de>

	* Fixed bug #5248: IRRE - Element browser cannot be used on new child records of a new parent record

2007-03-30  Franz Holzinger  <kontakt@fholzinger.com>

	* Fixed bug #4725: EM: Include older versions when fetching data using searchExtensionsXML()

2007-03-28  Oliver Hader  <oh@inpublica.de>
