@@ -734,7 +734,6 @@
 						// Initialize the page-select functions to check rootline:
 					$temp_sys_page = t3lib_div::makeInstance('t3lib_pageSelect');
 					$temp_sys_page->init($this->showHiddenPage);
-
 						// If root line contained NO records and ->error_getRootLine_failPid tells us that it was because of a pid=-1 (indicating a "version" record)...:
 					if (!count($temp_sys_page->getRootLine($this->id,$this->MP)) && $temp_sys_page->error_getRootLine_failPid==-1)	{
 
@@ -966,8 +965,17 @@
 
 			// If not rootline we're off...
 		if (!count($this->rootLine))	{
-			$this->printError('The requested page didn\'t have a proper connection to the tree-root! <br /><br />('.$this->sys_page->error_getRootLine.')');
-			exit;
+			$ws = $this->whichWorkspace();
+			if ($this->sys_page->error_getRootLine_failPid==-1 && $ws) {
+				$this->sys_page->versioningPreview = TRUE;
+				$this->versioningWorkspaceId = $ws;
+				$this->rootLine = $this->sys_page->getRootLine($this->id,$this->MP);
+			}
+			if (!count($this->rootLine))	{
+				$this->printError('The requested page didn\'t have a proper connection to the tree-root! <br /><br />('.$this->sys_page->error_getRootLine.')');
+				exit;
+			}
+			$this->fePreview = 1;
 		}
 
 			// Checking for include section regarding the hidden/starttime/endtime/fe_user (that is access control of a whole subbranch!)
